@startuml
skinparam classAttributeIconSize 0
skinparam groupInheritance 2
skinparam linetype polyline
!include skin.puml
class it.polimi.ingsw.client.backend.ClientPingSender {
# void timeTick()
}
class it.polimi.ingsw.client.backend.ClientPingTimer {
# void explode()
}
class it.polimi.ingsw.client.backend.DefaultConnector {
+ void connectToServer(String,int)
+ void disconnect()
+ void disconnect(ServerResponse)
+ void quit()
+ void sendRequest(ClientRequest)
}
abstract class it.polimi.ingsw.client.backend.Connector {
+ void addObserver(ClientAcceptor)
+ void removeObserver(ClientAcceptor)
+ {abstract}void connectToServer(String,int)
+ {abstract}void disconnect()
+ {abstract}void disconnect(ServerResponse)
+ {abstract}void quit()
+ void updateAll(ServerResponse)
+ {abstract}void sendRequest(ClientRequest)
}


it.polimi.ingsw.controller.ping_protocol.RegularExecutor <|-- it.polimi.ingsw.client.backend.ClientPingSender
it.polimi.ingsw.controller.ping_protocol.TimeBomb <|-- it.polimi.ingsw.client.backend.ClientPingTimer
it.polimi.ingsw.client.backend.Connector <|-- it.polimi.ingsw.client.backend.DefaultConnector
@enduml